# fastapi-template-vertical-slices

./: .env.dev  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  home.py
backend/app/api/v1/: __init__.py  clients.py  items.py
backend/app/auth/: router.py  schemas.py
backend/app/clients/: models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  consts.py  crud.py  database.py  deps.py  logging_config.py  middleware.py  models.py  schemas.py  security.py
backend/app/health/: router.py
backend/app/items/: models.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  base.py  clients.py  items.py
backend/app/schemas/: base.py  clients.py  items.py  token.py
backend/app/services/: clients.py  items.py
backend/app/users/: models.py  router.py  schemas.py  service.py
backend/docker/: backend.dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 2026_02_26_1611-934ef99b2d7d_add_client_model.py  2026_02_26_1612-d3f387e179da_add_item_model.py  2026_02_28_0107-219c69f50645_add_users_table.py  2026_02_28_0110-56752a35789e_add_items_table.py  2026_04_09_1419-5a919dec6e83_add_users_table.py  2026_04_09_1420-e568be01a144_add_items_table.py
backend/scripts/: initial_data.py  start.sh
backend/tests/: conftest.py  utils.py
backend/tests/api/: test_auth.py  test_clients.py  test_health.py  test_home.py  test_items.py  test_users.py
